= RSpec Changelog

== Version 0.5.4 (in SVN)
Release notes go here

* Made the RCovVerify task part of the standard toolset. [aslak_hellesoy]
* Documented Rake task and how to use it with Rcov [aslak_hellesoy]
* Implemented <ruby></ruby> tags for website (hooking into ERB, RedCloth and syntax) [aslak_hellesoy]
* RSpec Rake task now takes spec_opts and out params so it can be used for doc generation [aslak_hellesoy]
* RCov integration for RSpec Rake task (#4058) [aslak_hellesoy]
* Group all results instead of prinitng them several times (#4057) [aslak_hellesoy]
* Remove mock.rb from backtrace [aslak_hellesoy]
* Mocks can now yield [aslak_hellesoy]
* should.not.raise reports actual error rather than specified error class [dchelimsky]
* backtrace shows context name and spec name [dchelimsky]
* backtrace can run in quiet or verbose mode [dchelimsky]
* errors in setup or teardown are reported as happening in setup or teardown (not in the specification) [dchelimsky]
* split examples into examples (passing) and failing_examples [dchelimsky]

== Version 0.5.3
The "hurry up, CoR is in two days" release.

* Don't run rcov by default [aslak_hellesoy]
* Make separate task for running tests with RCov [aslak_hellesoy]
* Added Rake task to fail build if coverage drops below a certain threshold [aslak_hellesoy]
* Even more failure output cleanup (simplification) [dchelimsky]
* Added duck_type constraint for mocks [dchelimsky]

== Version 0.5.2
This release has minor improvements to the commandline and fixes some gem warnings

* Readded README to avoid RDoc warnings [aslak_hellesoy]
* Added --version switch to commandline [aslak_hellesoy]
* More changes to the mock API [dastels], [dchelimsky]

== Version 0.5.1
This release is the first release of RSpec with a new website. It will look better soon.

* Added initial documentation for API [dastels]
* Added website based on webgen [aslak_hellesoy]
* Modified test task to use rcov [aslak_hellesoy]